--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "22.12.0"
-          cache: "npm"
+          node-version: '22.12.0'
+          cache: 'npm'
       - run: npm ci
       - run: npm run build
         # Lägg till env här senare om ni behöver, tex VITE_API_BASE_URL
@@ -28,5 +28,5 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "eu-north-1"
-          SOURCE_DIR: "dist"
+          AWS_REGION: 'eu-north-1'
+          SOURCE_DIR: 'dist'
